--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div class="pageWrapper">
+    <div class="pagesWrapper">
       <header>
         <nav class="clear">
           <ul>
